<resources>
    <string name="app_name">Smart To Do Reminder</string>
    <string name="facebook_app_id">1045553882579292</string>
    <string name="fb_login_protocol_scheme">fb1045553882579292</string>

    <string name="banner_ad_unit_id">ca-app-pub-6176657104979138/7323422919</string>

    <string name="regSuccess">Successfully Registered! Please SignIn...</string>
    <string name="saveSuccess">Successfully saved!</string>
    <string name="validMail">Enter a valid mail!</string>
    <string name="fillArea">Enter all necessary information!</string>
    <string name="incorrectInfo">Incorrect Email or Password!</string>
    <string name="resetSend">Reset mail sent!</string>
    <string name="version">Version 1.0</string>
    <string name="select">SELECT</string>
    <string name="titleMissing">Enter title!</string>
    <string name="dateMissing">Select at least one day!</string>
    <string name="typeEmpty">Enter URL!</string>

    <!--Settings-->
    <string name="email">EMAIL ADDRESS</string>
    <string name="SETTINGS">SETTINGS</string>
    <string name="Account">Account</string>
    <string name="AccountBig">ACCOUNT SETTINGS</string>
    <string name="Change_Password">Change Password</string>
    <string name="Help">Help</string>
    <string name="Feedback">Feedback</string>
    <string name="About">About</string>
    <string name="Logout">Logout</string>
    <string name="LogoutSucces">Successfully Logout!</string>
    <string name="resetMail">SEND PASSWORD RESET EMAIL</string>
    <string name="controlInternet">Control internet connection!</string>

    <string name="aboutTitle">SMART DISPLAY</string>
    <string name="aboutContent">  Smart Display assists you in controlling your tasks and controlling the activities of your relatives. This application, which can be used both on your own device and on a stationary device, will help you in your daily life.</string>

    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="birthday">Birthday</string>
    <string name="emailInfo">Email</string>
    <string name="birthHint">dd/mm/yyyy</string>

    <!--add-->
    <string name="addTitle">ADD NEW TASK</string>
    <string name="updateTitle">UPDATE TASK</string>
    <string name="taskName">Title</string>
    <string name="hintName">Enter your task title</string>
    <string name="taskDesc">Description</string>
    <string name="hintDesc">Enter your task description</string>
    <string name="taskGoal">Goal</string>
    <string name="hintGoal">Enter your task goal day</string>
    <string name="repeatWeek">Repeat Weekly</string>
    <string name="taskTime">Add Time</string>
    <string name="taskDate">Select Date</string>
    <string name="taskType">Notification Type</string>
    <string name="typeOne">Use Default</string>
    <string name="typetwo">Use Default And Video</string>
    <string name="hintURL">Enter Youtube Video URL</string>
    <string name="onlyOnce">Only Once</string>

    <string name="search">Search</string>
    <string name="todo">TO DO</string>
    <string name="done">DONE</string>

    <string name="today">TODAY</string>

    <!--filter-->
    <string name="sortAz">Sort Title: A to Z</string>
    <string name="sortZa">Sort Title: Z to A</string>
    <string name="sortCf">Sort Time: Closest to Furthest</string>
    <string name="sortFc">Sort Time: Furthest to Closest</string>

    <string name="filter">Filter</string>
    <string name="syncCalendar">Sync Calendar</string>
    <string name="successSync">Successfully Synced Calendar Tasks!</string>
    <string name="successDeleted">Successfully Deleted Calendar Tasks!</string>

    <string name="isNotificationsActive">Please allow notifications from the device settings!</string>

    <string name="switchScreen">Smart Screen</string>

    <!--weather-->
    <string name="place_not_found">Sorry, no weather data found.</string>
    <string name="locationPermission">Please give location access permission!</string>

    <!--welcome-->
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Welcome!</string>
    <string name="slide_1_desc">The easiest way to plan even the toughest tasks! Follow the tasks whenever you want from wherever you want.</string>

    <string name="slide_2_title">Add New Tasks!</string>
    <string name="slide_2_desc">Plan all missed works that are yours, friends or family! Easily manage tasks on all devices connected to your own account.</string>

    <string name="slide_3_title">Alarms!</string>
    <string name="slide_3_desc">Get reminders on time! Also you have a smart screen in the application. Use it as table clock with unlimited new features!</string>

    <string name="slide_4_title">Done!</string>
    <string name="slide_4_desc">Let\'s get started for these and more features...</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> click Help</string>
    <string name="play_again">Play Again</string>

</resources>
